# quant-finance-notebooks

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-distributions.ipynb  02-moments.ipynb  03-normality-tests.ipynb  04-covariance.ipynb  05-correlation.ipynb  06-cross-correlation.ipynb  07-ordinary-least-squares.ipynb  08-multivariate-least-squares.ipynb  09-regression-tests.ipynb  10-multicolinearity.ipynb  setup.py
