[project]
name = "quant-finance-notebooks"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adolfo Villalobos", email = "amvillalobos@uc.cl"},
]
dependencies = [
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "statsmodels>=0.14.3",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "arch>=7.1.0",
    "jupyter>=1.1.1",
    "plotly>=5.24.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
